[package]
name = "template"
description = "A rust library for making idiomatic, declarative, builder-like patterns that use the struct literal syntax."
version = "0.1.0"
edition = "2021"
license = "LGPLv3"
keywords = ["builder", "template", "struct-literal", "declarative", "DSL"]
categories = ["rust-patterns"]
repository = "https://github.com/aggalex/template"
readme = "README.md"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "./prelude", version = "0.1.0" }